// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoachMark renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
      >
        <svg
          class="om-react-ui-coach-mark-arrow"
          fill="none"
          viewBox="0 0 36 9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="om-react-ui-coach-mark-arrow-fill"
            d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
          />
          <path
            class="om-react-ui-coach-mark-arrow-stroke"
            d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
          />
        </svg>
        <div
          class="om-react-ui-coach-mark-content"
        >
          <div
            class="om-react-ui-coach-mark-text"
          >
            <div
              class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
            >
              Welcome
            </div>
            <span
              class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
            >
              This is the first step
            </span>
          </div>
        </div>
        <div
          class="om-react-ui-coach-mark-footer"
        >
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
            disabled=""
            type="button"
          >
            Back
          </button>
          <div
            class="om-react-ui-carousel"
          >
            <button
              aria-label="Go to step 1"
              class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
              type="button"
            />
            <button
              aria-label="Go to step 2"
              class="om-react-ui-carousel-dot"
              type="button"
            />
            <button
              aria-label="Go to step 3"
              class="om-react-ui-carousel-dot"
              type="button"
            />
          </div>
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
            type="button"
          >
            Next
          </button>
        </div>
        <button
          aria-label="Dismiss"
          class="om-react-ui-coach-mark-dismiss"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="14"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
    >
      <svg
        class="om-react-ui-coach-mark-arrow"
        fill="none"
        viewBox="0 0 36 9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="om-react-ui-coach-mark-arrow-fill"
          d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
        />
        <path
          class="om-react-ui-coach-mark-arrow-stroke"
          d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
        />
      </svg>
      <div
        class="om-react-ui-coach-mark-content"
      >
        <div
          class="om-react-ui-coach-mark-text"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
          >
            Welcome
          </div>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
          >
            This is the first step
          </span>
        </div>
      </div>
      <div
        class="om-react-ui-coach-mark-footer"
      >
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
          disabled=""
          type="button"
        >
          Back
        </button>
        <div
          class="om-react-ui-carousel"
        >
          <button
            aria-label="Go to step 1"
            class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
            type="button"
          />
          <button
            aria-label="Go to step 2"
            class="om-react-ui-carousel-dot"
            type="button"
          />
          <button
            aria-label="Go to step 3"
            class="om-react-ui-carousel-dot"
            type="button"
          />
        </div>
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
          type="button"
        >
          Next
        </button>
      </div>
      <button
        aria-label="Dismiss"
        class="om-react-ui-coach-mark-dismiss"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="14"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CoachMark renders last step with finish button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
      >
        <svg
          class="om-react-ui-coach-mark-arrow"
          fill="none"
          viewBox="0 0 36 9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="om-react-ui-coach-mark-arrow-fill"
            d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
          />
          <path
            class="om-react-ui-coach-mark-arrow-stroke"
            d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
          />
        </svg>
        <div
          class="om-react-ui-coach-mark-content"
        >
          <div
            class="om-react-ui-coach-mark-text"
          >
            <div
              class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
            >
              Done
            </div>
            <span
              class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
            >
              All set
            </span>
          </div>
        </div>
        <div
          class="om-react-ui-coach-mark-footer"
        >
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back"
            type="button"
          >
            Back
          </button>
          <div
            class="om-react-ui-carousel"
          >
            <button
              aria-label="Go to step 1"
              class="om-react-ui-carousel-dot"
              type="button"
            />
            <button
              aria-label="Go to step 2"
              class="om-react-ui-carousel-dot"
              type="button"
            />
            <button
              aria-label="Go to step 3"
              class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
              type="button"
            />
          </div>
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
            type="button"
          >
            Finish
          </button>
        </div>
        <button
          aria-label="Dismiss"
          class="om-react-ui-coach-mark-dismiss"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="14"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
    >
      <svg
        class="om-react-ui-coach-mark-arrow"
        fill="none"
        viewBox="0 0 36 9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="om-react-ui-coach-mark-arrow-fill"
          d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
        />
        <path
          class="om-react-ui-coach-mark-arrow-stroke"
          d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
        />
      </svg>
      <div
        class="om-react-ui-coach-mark-content"
      >
        <div
          class="om-react-ui-coach-mark-text"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
          >
            Done
          </div>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
          >
            All set
          </span>
        </div>
      </div>
      <div
        class="om-react-ui-coach-mark-footer"
      >
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back"
          type="button"
        >
          Back
        </button>
        <div
          class="om-react-ui-carousel"
        >
          <button
            aria-label="Go to step 1"
            class="om-react-ui-carousel-dot"
            type="button"
          />
          <button
            aria-label="Go to step 2"
            class="om-react-ui-carousel-dot"
            type="button"
          />
          <button
            aria-label="Go to step 3"
            class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
            type="button"
          />
        </div>
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
          type="button"
        >
          Finish
        </button>
      </div>
      <button
        aria-label="Dismiss"
        class="om-react-ui-coach-mark-dismiss"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="14"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CoachMark renders with icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
      >
        <svg
          class="om-react-ui-coach-mark-arrow"
          fill="none"
          viewBox="0 0 36 9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="om-react-ui-coach-mark-arrow-fill"
            d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
          />
          <path
            class="om-react-ui-coach-mark-arrow-stroke"
            d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
          />
        </svg>
        <div
          class="om-react-ui-coach-mark-content"
        >
          <div
            class="om-react-ui-coach-mark-icon"
          >
            <span>
              Icon
            </span>
          </div>
          <div
            class="om-react-ui-coach-mark-text"
          >
            <div
              class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
            >
              Title
            </div>
            <span
              class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
            >
              Description
            </span>
          </div>
        </div>
        <div
          class="om-react-ui-coach-mark-footer"
        >
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
            disabled=""
            type="button"
          >
            Back
          </button>
          <div
            class="om-react-ui-carousel"
          >
            <button
              aria-label="Go to step 1"
              class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
              type="button"
            />
            <button
              aria-label="Go to step 2"
              class="om-react-ui-carousel-dot"
              type="button"
            />
            <button
              aria-label="Go to step 3"
              class="om-react-ui-carousel-dot"
              type="button"
            />
            <button
              aria-label="Go to step 4"
              class="om-react-ui-carousel-dot"
              type="button"
            />
          </div>
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
            type="button"
          >
            Next
          </button>
        </div>
        <button
          aria-label="Dismiss"
          class="om-react-ui-coach-mark-dismiss"
          type="button"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="14"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
    >
      <svg
        class="om-react-ui-coach-mark-arrow"
        fill="none"
        viewBox="0 0 36 9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="om-react-ui-coach-mark-arrow-fill"
          d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
        />
        <path
          class="om-react-ui-coach-mark-arrow-stroke"
          d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
        />
      </svg>
      <div
        class="om-react-ui-coach-mark-content"
      >
        <div
          class="om-react-ui-coach-mark-icon"
        >
          <span>
            Icon
          </span>
        </div>
        <div
          class="om-react-ui-coach-mark-text"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
          >
            Title
          </div>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-lg om-react-ui-typography-color-default-secondary"
          >
            Description
          </span>
        </div>
      </div>
      <div
        class="om-react-ui-coach-mark-footer"
      >
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
          disabled=""
          type="button"
        >
          Back
        </button>
        <div
          class="om-react-ui-carousel"
        >
          <button
            aria-label="Go to step 1"
            class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
            type="button"
          />
          <button
            aria-label="Go to step 2"
            class="om-react-ui-carousel-dot"
            type="button"
          />
          <button
            aria-label="Go to step 3"
            class="om-react-ui-carousel-dot"
            type="button"
          />
          <button
            aria-label="Go to step 4"
            class="om-react-ui-carousel-dot"
            type="button"
          />
        </div>
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
          type="button"
        >
          Next
        </button>
      </div>
      <button
        aria-label="Dismiss"
        class="om-react-ui-coach-mark-dismiss"
        type="button"
      >
        <i
          class="om-react-ui-icons-wrapper"
          style="display: inline-flex; align-items: center; justify-content: center; width: 14px; height: 14px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 14px; --icon-height: 14px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="14"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.5859 12L4.79308 6.20718L6.20729 4.79297L12.0001 10.5858L17.793 4.79297L19.2072 6.20718L13.4143 12L19.2073 17.793L17.7931 19.2072L12.0001 13.4142L6.20718 19.2072L4.79297 17.793L10.5859 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CoachMark renders without dismiss button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
      >
        <svg
          class="om-react-ui-coach-mark-arrow"
          fill="none"
          viewBox="0 0 36 9"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="om-react-ui-coach-mark-arrow-fill"
            d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
          />
          <path
            class="om-react-ui-coach-mark-arrow-stroke"
            d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
          />
        </svg>
        <div
          class="om-react-ui-coach-mark-content"
        >
          <div
            class="om-react-ui-coach-mark-text"
          >
            <div
              class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
            >
              Title
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-coach-mark-footer"
        >
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
            disabled=""
            type="button"
          >
            Back
          </button>
          <div
            class="om-react-ui-carousel"
          >
            <button
              aria-label="Go to step 1"
              class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
              type="button"
            />
            <button
              aria-label="Go to step 2"
              class="om-react-ui-carousel-dot"
              type="button"
            />
          </div>
          <button
            class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-coach-mark om-react-ui-coach-mark-top"
    >
      <svg
        class="om-react-ui-coach-mark-arrow"
        fill="none"
        viewBox="0 0 36 9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="om-react-ui-coach-mark-arrow-fill"
          d="M17.3146 1.64505L10.3664 8.1846C9.80987 8.70836 9.07447 9 8.31027 9H27.6897C26.9255 9 26.1901 8.70836 25.6336 8.1846L18.6854 1.64505C18.3003 1.28265 17.6997 1.28265 17.3146 1.64505Z"
        />
        <path
          class="om-react-ui-coach-mark-arrow-stroke"
          d="M8 8.5H8.34315C9.40401 8.5 10.4214 8.07857 11.1716 7.32843L17.2929 1.20711C17.6834 0.816582 18.3166 0.816583 18.7071 1.20711L24.8284 7.32843C25.5786 8.07857 26.596 8.5 27.6569 8.5H28"
        />
      </svg>
      <div
        class="om-react-ui-coach-mark-content"
      >
        <div
          class="om-react-ui-coach-mark-text"
        >
          <div
            class="om-react-ui-typography om-react-ui-typography-headline om-react-ui-typography-headline-lg om-react-ui-typography-color-default"
          >
            Title
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-coach-mark-footer"
      >
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-back om-react-ui-coach-mark-btn-disabled"
          disabled=""
          type="button"
        >
          Back
        </button>
        <div
          class="om-react-ui-carousel"
        >
          <button
            aria-label="Go to step 1"
            class="om-react-ui-carousel-dot om-react-ui-carousel-dot-active"
            type="button"
          />
          <button
            aria-label="Go to step 2"
            class="om-react-ui-carousel-dot"
            type="button"
          />
        </div>
        <button
          class="om-react-ui-coach-mark-btn om-react-ui-coach-mark-btn-next"
          type="button"
        >
          Next
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
